# Battleships

src/: 2_1lenShips.txt  2ship.txt  3ship_input.txt  AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  CheatingAI.cpp  CheatingAI.h  Game.cpp  Game.h  Human.h  Input_Validation.cpp  Input_Validation.h  Move.cpp  Move.h  Players.cpp  Players.h  Random.cpp  Random.h  RandomAI.cpp  RandomAI.h  SearchAndDestroyAI.cpp  SearchAndDestroyAI.h  Ships.cpp  Ships.h  file_reader.cpp  file_reader.h  main.cpp
src/input_txt_files/: 2_2lenShips_AI.txt
